--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,17 @@
 {
-  "name": "bitcore-lib-dash",
-  "main": "./bitcore-lib-dash.min.js",
+  "name": "bitcore-lib-sparks",
+  "main": "./bitcore-lib-sparks.min.js",
   "version": "0.15.3",
-  "homepage": "https://github.com/dashevo/bitcore-lib-dash",
+  "homepage": "https://github.com/sparksevo/bitcore-lib-sparks",
   "authors": [
-    "Dash", "BitPay, Inc."
+    "sparks", "BitPay, Inc."
   ],
-  "description": "A pure, powerful core for your Dash project.",
+  "description": "A pure, powerful core for your sparks project.",
   "moduleType": [
     "globals"
   ],
   "keywords": [
-    "dash",
+    "sparks",
     "bitcoin",
     "bitcore",
     "btc",
