--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dashevo/dashcore-lib",
+  "name": "@sparksevo/sparkscore-lib",
   "version": "0.15.6",
-  "description": "A pure and powerful JavaScript Dash library.",
+  "description": "A pure and powerful JavaScript sparks library.",
   "author": "BitPay <dev@bitpay.com>",
   "main": "index.js",
   "scripts": {
@@ -63,7 +63,7 @@
     },
     {
       "name": "Jon Kindel",
-      "email": "jon@dash.org"
+      "email": "jon@sparks.org"
     },
     {
       "name": "Alex Werner",
@@ -71,7 +71,7 @@
     }
   ],
   "keywords": [
-    "dash",
+    "sparks",
     "transaction",
     "address",
     "p2p",
@@ -85,16 +85,16 @@
     "bip69",
     "bip70",
     "multisig",
-    "dashcore"
+    "sparkscore"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dashevo/dashcore-lib.git"
+    "url": "https://github.com/sparksevo/sparkscore-lib.git"
   },
   "bugs": {
-    "url": "https://github.com/dashevo/dashcore-lib/issues"
+    "url": "https://github.com/sparksevo/sparkscore-lib/issues"
   },
-  "homepage": "https://github.com/dashevo/dashcore-lib",
+  "homepage": "https://github.com/sparksevo/sparkscore-lib",
   "browser": {
     "request": "browser-request"
   },
