--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "buffer-compare": "=1.0.0",
     "elliptic": "=3.0.3",
     "inherits": "=2.0.1",
-    "losparks": "^4.17.11",
+    "lodash": "^4.17.11",
     "sha512": "=0.0.1"
   },
   "devDependencies": {
