--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
     "elliptic": "=6.4.1",
     "inherits": "=2.0.1",
     "lodash": "^4.17.11",
-    "unorm": "^1.4.1"
+    "unorm": "^1.4.1",
+    "sha512": "=0.0.1"
   },
   "devDependencies": {
     "brfs": "^2.0.1",
