--- a/package.json
+++ b/package.json
@@ -15,64 +15,8 @@
   },
   "contributors": [
     {
-      "name": "Daniel Cousens",
-      "email": "bitcoin@dcousens.com"
-    },
-    {
-      "name": "Esteban Ordano",
-      "email": "eordano@gmail.com"
-    },
-    {
-      "name": "Gordon Hall",
-      "email": "gordon@bitpay.com"
-    },
-    {
-      "name": "Jeff Garzik",
-      "email": "jgarzik@bitpay.com"
-    },
-    {
-      "name": "Kyle Drake",
-      "email": "kyle@kyledrake.net"
-    },
-    {
-      "name": "Manuel Araoz",
-      "email": "manuelaraoz@gmail.com"
-    },
-    {
-      "name": "Matias Alejo Garcia",
-      "email": "ematiu@gmail.com"
-    },
-    {
-      "name": "Ryan X. Charles",
-      "email": "ryanxcharles@gmail.com"
-    },
-    {
-      "name": "Stefan Thomas",
-      "email": "moon@justmoon.net"
-    },
-    {
-      "name": "Stephen Pair",
-      "email": "stephen@bitpay.com"
-    },
-    {
-      "name": "Wei Lu",
-      "email": "luwei.here@gmail.com"
-    },
-    {
-      "name": "UdjinM6",
-      "email": "UdjinM6@gmail.com"
-    },
-    {
-      "name": "Jon Kindel",
-      "email": "jon@sparks.org"
-    },
-    {
-      "name": "Alex Werner",
-      "email": "alex@werner.fr"
-    },
-    {
-      "name": "Anton Suprunchuk",
-      "email": "antouhou@gmail.com"
+      "name": "z3r0 m0r4k",
+      "email": "m0r4k@outlook.com"
     }
   ],
   "keywords": [
