--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "request": "browser-request"
   },
   "dependencies": {
-    "@sparksevo/x11-hash-js": "^1.0.2",
+    "@dashevo/x11-hash.js": "^1.0.2",
     "bn.js": "=4.11.8",
     "bs58": "=4.0.1",
     "elliptic": "=6.4.1",
