--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   },
   "dependencies": {
     "@dashevo/x11-hash-js": "^1.0.2",
+    "multi-hashing-plus": "^1.0.0",
     "bn.js": "=4.11.8",
     "bs58": "=4.0.1",
     "elliptic": "=6.4.1",
